[project]
name = "marauder-mcp"
version = "0.1.0"
description = "MCP server for ESP32 Marauder serial control"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pyserial>=3.5",
]

[project.scripts]
marauder-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
